--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,15 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+
+# vs code
+workspace.code-workspace
+
+# emailjs
+emailJSKeys.json
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
