--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "15.x"
+  },
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
