Fixed covid tracker not loading

--- a/src/components/Projects/projectsData.json
+++ b/src/components/Projects/projectsData.json
@@ -42,6 +42,6 @@
     "caption": "Built a portfolio website with ReactJS and Bootstrap. Developed contact form, styling, routing, etc.",
     "git": "https://github.com/santiagomed/santiago_portfolio",
     "hc": false,
-    "liveDemo": "/"
+    "liveDemo": "/home"
   }
 ]
