--- a/src/components/Projects/projectsData.json
+++ b/src/components/Projects/projectsData.json
@@ -1,6 +1,15 @@
 [
   {
     "_id": "1",
+    "img": "python",
+    "title": "RENO Virtual Assistant",
+    "caption": "Virtual assistant built with Python. Utilizes Python modules to recognize speech and complete tasks.",
+    "git": "https://github.com/santiagomed/reno-voice-assistant",
+    "hc": false,
+    "liveDemo": false
+  },
+  {
+    "_id": "2",
     "img": "cplusplus",
     "title": "Euchre",
     "caption": "Euchre virtual card game simulator built with C++ for single and multiplayer play on the terminal.",
@@ -9,7 +18,7 @@
     "liveDemo": false
   },
   {
-    "_id": "2",
+    "_id": "3",
     "img": "cplusplus",
     "title": "ML Classifier",
     "caption": "Built a Machine Learning Classifier using a simplified version of a \"Multi-Variate Bernoulli Naive Bayes Classifier\".",
@@ -18,7 +27,7 @@
     "liveDemo": false
   },
   {
-    "_id": "3",
+    "_id": "4",
     "img": "react",
     "title": "Vidly",
     "caption": "Built movie management service based on the CodeWithMosh ReactJS course (\"Mastering React\").",
@@ -27,7 +36,7 @@
     "liveDemo": false
   },
   {
-    "_id": "4",
+    "_id": "5",
     "img": "react",
     "title": "COVID-19 Tracker",
     "caption": "COVID-19 infected, recovered, and deaths live tracker built using ReactJS. Includes visualizations. Information fetched from an API.",
@@ -36,7 +45,7 @@
     "liveDemo": "/covid-tracker-demo"
   },
   {
-    "_id": "5",
+    "_id": "6",
     "img": "react",
     "title": "Portfolio ReactJS Website",
     "caption": "Built a portfolio website with ReactJS and Bootstrap. Developed contact form, styling, routing, etc.",
